# samba

./: .gitignore  Agogo Levadas.rst  Breaks.rst  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  plan.md  sheets_to_banana.ipynb
.claude/: .gitignore
.claude/.skills/skill-creator/: .gitignore
.claude/.skills/understand-bananadrum/: SKILL.md
.claude/.skills/understand-sapu-music-notes/: SKILL.md
.github/workflows/: delete_branch_merged_to_main.yml  test_suite.yml  validate_instructions.yml  validate_usage_instructions.yml
banana_to_pdf/: FAQ.md  README.md  __main__.py  pyproject.toml  requirements.txt
banana_to_pdf/deployment/: banana_to_pdf.ipynb
banana_to_pdf/doc/: deployment-plan.md  design_plan.md
banana_to_pdf/src/: __main__.py  decode.py  mapping.py  render.py
banana_to_pdf/tests/: test_decode.py  test_main.py  test_mapping.py  test_render.py
banana_to_pdf/tools/: symbol_compare.py
banana_to_sheet/doc/: design-plan.md
sheet_to_banana/: FAQ.md  README.md  __main__.py  pyproject.toml
sheet_to_banana/deployment/: sheet_to_banana.ipynb  sheets_to_banana.ipynb
sheet_to_banana/doc/: deployment-plan.md  design-plan.md
sheet_to_banana/src/: __main__.py  encode.py  fetch.py  mapping.py
sheet_to_banana/tests/: test_e2e.py  test_encode.py  test_fetch.py  test_keywords.py  test_mapping.py  test_parse.py  test_trim_empty_bars.py
sheets_to_banana/: FAQ.md  PLAN.md  README.md  __main__.py  encode.py  fetch.py  keywords.py  mapping.py  parse.py  pyproject.toml
sheets_to_banana/deployment/: sheets_to_banana.ipynb
sheets_to_banana/deployment/.ipynb_checkpoints/: sheets_to_banana-checkpoint.ipynb
sheets_to_banana/doc/: PLAN.md  branch-plan.md  branch_plan.md  deployment-plan.md  design-plan.md  e2e_test_plan.md  notebook_branch_detection_plan.md  wider-audience-plan.md
sheets_to_banana/source/: __main__.py  encode.py  mapping.py  parse.py
sheets_to_banana/src/: __main__.py  encode.py  fetch.py  keywords.py  mapping.py  parse.py
sheets_to_banana/tests/: csv_helpers.py  test_e2e.py  test_encode.py  test_fetch.py  test_keywords.py  test_mapping.py  test_parse.py  test_trim_empty_bars.py
tests/: test_encode.py  test_mapping.py  test_parse.py
