[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "banana_to_pdf"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = ["banana_to_pdf"]

[tool.setuptools.package-dir]
"banana_to_pdf" = "src"

[tool.pytest.ini_options]
pythonpath = ["."]
