[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sheet_to_banana"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["requests>=2.31.0"]

[tool.setuptools]
packages = ["sheet_to_banana"]

[tool.setuptools.package-dir]
"sheet_to_banana" = "src"

[tool.pytest.ini_options]
pythonpath = ["."]
