[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sheets_to_banana"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["requests>=2.31.0"]

[project.scripts]
sheets_to_banana = "sheets_to_banana.__main__:main"

[tool.setuptools]
packages = ["sheets_to_banana"]

[tool.setuptools.package-dir]
"sheets_to_banana" = "src"

[tool.pytest.ini_options]
pythonpath = ["."]
